refactor: refactoring response structure
